--- a/README
+++ b/README
@@ -1,3 +1,6 @@
+##Dependencies : 
+    Install JetBrainsMono Font, thats it :)
+
 st - simple terminal
 --------------------
 st is a simple terminal emulator for X which sucks less.
